crates/caffeine-ls/tests/snapshots/lsp_snapshots__annotation_element_diagnostics.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: items
---
[
  {
    "range": {
      "start": {
        "line": 18,
        "character": 5
      },
      "end": {
        "line": 18,
        "character": 9
      }
    },
    "severity": 1,
    "code": "compiler.err.annotation.missing.default.value",
    "source": "caffeine-ls",
    "message": "'x' missing but required"
  },
  {
    "range": {
      "start": {
        "line": 21,
        "character": 13
      },
      "end": {
        "line": 21,
        "character": 18
      }
    },
    "severity": 1,
    "code": "compiler.err.attribute.value.must.be.constant",
    "source": "caffeine-ls",
    "message": "Attribute value must be constant"
  },
  {
    "range": {
      "start": {
        "line": 21,
        "character": 24
      },
      "end": {
        "line": 21,
        "character": 38
      }
    },
    "severity": 1,
    "code": "compiler.err.annotation.value.must.be.class.literal",
    "source": "caffeine-ls",
    "message": "Attribute value must be a class literal"
  },
  {
    "range": {
      "start": {
        "line": 21,
        "character": 44
      },
      "end": {
        "line": 21,
        "character": 46
      }
    },
    "severity": 1,
    "code": "compiler.err.enum.annotation.must.be.enum.constant",
    "source": "caffeine-ls",
    "message": "Attribute value must be an enum constant"
  },
  {
    "range": {
      "start": {
        "line": 26,
        "character": 23
      },
      "end": {
        "line": 26,
        "character": 25
      }
    },
    "severity": 1,
    "code": "compiler.err.cant.resolve.location.args",
    "source": "caffeine-ls",
    "message": "No annotation member named 'target'"
  }
]
