crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_burst_related.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: normalized
---
{
  "items": [],
  "kind": "full",
  "relatedDocuments": {
    "file://<WORKSPACE_ROOT>/src/p/B.java": {
      "kind": "unchanged",
      "resultId": "0000000000000000-99be16fd8416479f"
    }
  },
  "resultId": "0000000000000000-d1fba762150c532c"
}
