crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_deleted_after_delete.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
assertion_line: 912
expression: "normalize_and_sort(after, &lsp)"
---
{
  "items": [
    {
      "items": [],
      "kind": "full",
      "resultId": "bd60acb658c79e45",
      "uri": "file://<WORKSPACE_ROOT>/src/p/A.java",
      "version": 1
    }
  ]
}
