crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_revert_broken_b.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "normalize_and_sort(broken, &lsp)"
---
{
  "items": [
    {
      "code": "compiler.err.cant.resolve.location",
      "message": "Cannot resolve method 'go()'",
      "range": {
        "end": {
          "character": 22,
          "line": 2
        },
        "start": {
          "character": 20,
          "line": 2
        }
      },
      "severity": 1,
      "source": "caffeine-ls"
    }
  ],
  "kind": "full",
  "resultId": "6e1a04b4a16aede6"
}
