crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_revert_clean.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "normalize_and_sort(clean, &lsp)"
---
{
  "items": [],
  "kind": "full",
  "relatedDocuments": {
    "file://<WORKSPACE_ROOT>/src/p/B.java": {
      "items": [],
      "kind": "full",
      "resultId": "1"
    }
  },
  "resultId": "1"
}
