crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_typing_dependent_b_error.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "normalize_and_sort(before, &lsp)"
---
{
  "items": [],
  "kind": "full",
  "relatedDocuments": {
    "file://<WORKSPACE_ROOT>/src/p/B.java": {
      "items": [
        {
          "code": "compiler.err.cant.resolve.location",
          "message": "cannot find symbol\n  symbol:   method go()",
          "range": {
            "end": {
              "character": 24,
              "line": 2
            },
            "start": {
              "character": 18,
              "line": 2
            }
          },
          "severity": 1,
          "source": "caffeine-ls"
        }
      ],
      "kind": "full",
      "resultId": "1"
    }
  },
  "resultId": "1"
}
