crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_typing_fixed_b.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "normalize_and_sort(after, &lsp)"
---
{
  "items": [],
  "kind": "full",
  "resultId": "bd60acb658c79e45"
}
