crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_typing_fixed_b_in_related.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
expression: "normalize_and_sort(after, &lsp)"
---
{
  "items": [],
  "kind": "full",
  "relatedDocuments": {
    "file://<WORKSPACE_ROOT>/src/p/B.java": {
      "items": [],
      "kind": "full",
      "resultId": "2"
    }
  },
  "resultId": "1"
}
