crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_workspace_pull_after_fix.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
assertion_line: 1146
expression: "normalize_and_sort(after_fix, &lsp)"
---
{
  "items": [
    {
      "kind": "unchanged",
      "resultId": "bd60acb658c79e45",
      "uri": "file://<WORKSPACE_ROOT>/src/p/A.java",
      "version": 1
    },
    {
      "items": [],
      "kind": "full",
      "resultId": "bd60acb658c79e45",
      "uri": "file://<WORKSPACE_ROOT>/src/p/B.java",
      "version": null
    }
  ]
}
