crates/caffeine-ls/tests/snapshots/lsp_snapshots__cross_file_workspace_pull_full.snap
---
source: crates/caffeine-ls/tests/lsp_snapshots.rs
assertion_line: 1121
expression: "normalize_and_sort(first.clone(), &lsp)"
---
{
  "items": [
    {
      "items": [],
      "kind": "full",
      "resultId": "bd60acb658c79e45",
      "uri": "file://<WORKSPACE_ROOT>/src/p/A.java",
      "version": 0
    },
    {
      "items": [
        {
          "code": "compiler.err.cant.resolve.location",
          "message": "Cannot resolve method 'go()'",
          "range": {
            "end": {
              "character": 22,
              "line": 2
            },
            "start": {
              "character": 20,
              "line": 2
            }
          },
          "severity": 1,
          "source": "caffeine-ls"
        }
      ],
      "kind": "full",
      "resultId": "9a091b7a4f54337d",
      "uri": "file://<WORKSPACE_ROOT>/src/p/B.java",
      "version": null
    }
  ]
}
